--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "axios": "^0.19.2",
     "moment": "^2.24.0",
     "nano": "^8.2.2",
+    "pouchdb": "^7.2.1",
+    "pouchdb-find": "^7.2.1",
     "promise.allsettled": "^1.0.2",
     "uniqid": "^5.2.0",
     "util": "^0.12.2"
