journaled storage of the day at simulation level, removed store from agent for performance issues, removed monitoring > refactory of monitoring expected, removed cleanup of storage, removed descriptions, agents > simulation introduced a delay with the clock (between days) and bulk storage of all day events as one document

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "axios": "^0.19.2",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "nano": "^8.2.2",
     "pouchdb": "^7.2.1",
