--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "nano": "^8.2.2",
+    "os": "^0.1.1",
     "pouchdb": "^7.2.1",
     "pouchdb-find": "^7.2.1",
     "promise.allsettled": "^1.0.2",
+    "task.js": "^0.1.5",
     "uniqid": "^5.2.0",
     "util": "^0.12.2"
   },
